codekamp/src/cron.log
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
  File "/vagrant/src/manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
